Fix hero image color lines alignment

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -215,7 +215,7 @@
       border-left: 4px solid red;
       border-radius: 4px;
       top: 112px;
-      left: 50px;
+      left: 55px;
     }
 
     &.blue {
@@ -224,8 +224,8 @@
       border-top: 4px solid #3b82f6;
       border-right: 4px solid #3b82f6;
       border-radius: 4px;
-      bottom: 298px;
-      right: 118px;
+      bottom: 288px;
+      right: 124px;
     }
 
     &.yellow {
@@ -234,7 +234,7 @@
       border-top: 4px solid #f59e0b;
       border-right: 4px solid #f59e0b;
       border-radius: 4px;
-      bottom: 42px;
+      bottom: 420px;
       right: 140px;
     }
   }
